--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6141880697:AAFRCjkWDoKxGRvCQzaaccXAAWsdEznh1KI"                              # Require restart after changing it while bot running
+OWNER_ID = "28c6f268d78f2890fd75d614c36a3136"                               # Require restart after changing it while bot running
+TELEGRAM_API = "11760324"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "28c6f268d78f2890fd75d614c36a3136"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
@@ -17,7 +15,6 @@ DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 UPTOBOX_TOKEN = ""
-FILELION_API = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_OPTIONS = ""
@@ -35,8 +32,8 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/anasty17/mirror-leech-telegram-bot"
+UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
